# push

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  conf.py  index.rst  pyproject.toml  requirements.txt  run_tests.sh  setup.py
docs/: Makefile  requirements.txt
docs/source/: Hyperparameters.ipynb  bayes.rst  conf.py  context_switch.rst  ensemble.rst  examples.rst  index.rst  infer.rst  lib.rst  messages.rst  modules.rst  node_event_loop.rst  push.bayes.rst  push.lib.rst  push.particle.rst  push.pfuture.rst  push.push.rst  push.rst  stein_vgd.rst  swag.rst  test.rst  tutorials.rst  utils.rst  waitable.rst
examples/: index.rst
examples/00_Basic_Usage/: Hyperparameters.ipynb  Implementing_a_custom_Kernel.ipynb  Saving_and_Loading_Models.ipynb  Training.ipynb  index.rst
examples/01_Running/: Running.ipynb  index.rst
experiments/: README.md  bayes_1.sh  bayes_2.sh  gen_train_script.py  paperspace_provision.sh  paperspace_train_all_devices_4.sh  quick_test.sh  size_scale.sh  size_scale2.sh  size_scale_4.sh  train.py  train_baseline.sh  train_util.py
experiments/data/: .gitignore  download_direct.py
experiments/figures/: gen_scaling_figure2.ipynb  gen_transformer_scale.ipynb  mswag_analyze.ipynb
experiments/infer/: ensemble.py  mswag.py  push_ensemble.py  push_mswag.py  push_stein_vgd.py  standard.py  stein_vgd.py
experiments/nns/: bdl.py  losses.py  util.py
experiments/scripts/: paperspace_train_all_devices_1.sh  quick_test.sh  (+2 more)
push/: __init__.py  particle.py  pfuture.py  pqueue.py  push.py
test/: test_basic.py  test_cache.py  test_end2end.py
(+123 files in other folders)
